--- a/Backend/Mobicomm/src/main/resources/application.properties
+++ b/Backend/Mobicomm/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=Varun2615
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
+jwt.secret=your-secure-secret-key-at-least-32-characters
