--- a/Backend/Mobicomm/src/main/resources/application.properties
+++ b/Backend/Mobicomm/src/main/resources/application.properties
@@ -9,3 +9,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 jwt.secret=your-secure-secret-key-at-least-32-characters
+cashfree.app-id=TEST10517419d27c14addfda2d40637291471501
+cashfree.secret-key=cfsk_ma_test_ddc1bedef7cd2f5b938922626c93cca9_7e46e01a
+cashfree.base-url=https://sandbox.cashfree.com/pg
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=varunkumar20504@gmail.com
+spring.mail.password=ktrc lkii lddn ilfo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
