--- a/Backend/Mobicomm/src/main/resources/application.properties
+++ b/Backend/Mobicomm/src/main/resources/application.properties
@@ -15,8 +15,8 @@ razorpay.api.secret=fRGO8y1UD7OT33jN2oV3n3HN
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=varunkumar20504@gmail.com
-spring.mail.password=ktrc lkii lddn ilfo
+spring.mail.username=servicesmobicomm@gmail.com
+spring.mail.password=zbwe oveb aepa lnsl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
